Removed some unused items and images, Implemented all required stories and most stretch stories!

--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -47,13 +47,13 @@
 
     <EditText
         android:id="@+id/etCaption"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
+        android:layout_width="353dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="54dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Type a caption"
