--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/miSignout"
-        android:title="Sign out"
+        android:icon="@drawable/signout_button"
         app:showAsAction="always" />
+
 </menu>
